# NothingGame

./: .gitignore  CMakeLists.txt  README.md
NothingGame/: NothingGame-Info.plist  ResourcePath.hpp  main.cpp
NothingGame.xcodeproj/: project.pbxproj
NothingGame.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NothingGame.xcodeproj/xcuserdata/pelski.xcuserdatad/xcschemes/: NothingGame.xcscheme  xcschememanagement.plist
NothingGame/Engine/GameObjects/: Character.cpp  Character.hpp  Floor.cpp  Floor.hpp
NothingGame/Engine/Managers/: EventManager.cpp  EventManager.hpp  ImageManager.cpp  ImageManager.hpp  WindowManager.cpp  WindowManager.hpp
NothingGame/Engine/Scenes/: SplashScreen.cpp  SplashScreen.hpp  TestScene.cpp  TestScene.hpp
NothingGame/Engine/Types/: Block.cpp  Block.h  MapElement.cpp  MapElement.h  WorldMap.cpp  WorldMap.h
